[project]
name = "elder-risk"
version = "0.1.0"
description = ""
authors = [{ name = "Mike Hamilton", email = "mike.hamilton7@gmail.com" }]
requires-python = ">3.12,<3.13"
license = "MIT"
readme = "README.md"
dependencies = [
    "jupyterlab (>=4.4.5,<5.0.0)",
    "agno>=1.7.9",
    "fhir-resources>=8.1.0",
    "fhir>=0.0.4",
    "flytekit>=1.16.3",
    "pyarrow>=21.0.0",
    "loguru>=0.7.3",
    "spacy>=3.8.7",
    "medspacy>=1.3.1",
    "statsmodels>=0.14.5",
    "polars>=1.32.2",
    "pandas>=2.3.1",
    "numpy>=2.3.2",
    "deepeval>=3.3.9",
    "great-tables>=0.18.0",
    "rarfile>=4.2",
    "patool>=4.0.1",
    "scikit-learn>=1.7.1",
    "pydantic>=2.11.7",
    "duckdb>=1.3.2",
    "seaborn>=0.13.2",
    "transformers>=4.55.0",
]

[dependency-groups]
dev = [
    "deepchecks>=0.19.1",
    "langwatch-scenario>=0.7.8",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-datadir>=1.8.0",
    "pytest-regressions>=2.8.1",
    "pytest-sugar>=1.0.0",
    "ruff>=0.12.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [".venv"]
fix = true
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
